cmake_minimum_required(VERSION 3.28)
project(kilo LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(kilo kilo.cpp)
target_compile_definitions(kilo PRIVATE _DEFAULT_SOURCE _BSD_SOURCE _GNU_SOURCE)
target_compile_options(kilo PRIVATE -Wall -Wextra -pedantic)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
